# epseon_gui

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierrc  CHANGELOG.md  Dockerfile  Dockerfile.prod  LICENSE.md  README.md  build.py  codecov.yml  development.Dockerfile  docker-compose.development.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  entrypoint.sh  mkdocs.yaml  production.Dockerfile  pyproject.toml  requirements.txt
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  functiona_feature_request.md
.github/workflows/: build_n_deploy_docs.yaml  code_quality.yaml  release_to_test_pypi.yaml  type_checks.yaml  unit_tests.yaml
app/: crud.py  main.py  models.py
backend/epseon_gui/: __init__.py  console.py  crud.py  database.py  main.py  models.py  schemas.py
docs/: generate_reference_pages.py  ruff.toml
frontend/: .env  .eslintrc.json  .gitignore  .prettierrc  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  App.scss  index.js
frontend/src/assets/: poziome.json  wave_example.json  wave_example0.json  wave_example1.json  wave_example2.json
frontend/src/components/: Workspace.js
frontend/src/components/leftbar/: HideButton.js  Leftbar.js  OptionsButton.js
frontend/src/components/topbar/: Topbar.js
frontend/src/components/workspace/: DefaultWorkspace.js  Workspace.js  WorkspaceWrapper.js  WorkspacesBar.js
frontend/src/components/workspace/dataWorkspace/: DataWorkspace.js  DevicePanel.js  GenerationView.js  PreviewView.js  approximationMethods.js
frontend/src/components/workspace/dataWorkspace/generation/: DevicePanel.js  Form.js  GenerationView.js
frontend/src/components/workspace/dataWorkspace/preview/: PreviewView.js  WidgetCurveSelection.js  WidgetPlot.js  WidgetPlotSettings.js
frontend/src/ducks/: store.js  storeInitData.json
frontend/src/ducks/devices/: actions.js  operations.js  reducer.js  types.js
frontend/src/ducks/languages/: PL.json  actions.js  operations.js  reducer.js  types.js
frontend/src/ducks/workspaces/: actions.js  operations.js  reducer.js  types.js
pec-frontend/: package-lock.json  package.json
pec-frontend/src/: App.css  App.css.map  App.scss
scripts/templates/: MIT.md-jinja
test/: __init__.py  ruff.toml  test_example.py
test/postman/: backendTests.postman_collection.json
